--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -9,9 +9,9 @@ Host *
   ForwardAgent yes
   SendEnv LANG LC_ALL
 
-#Host remote
-#  Hostname remote^gateway
-#  Port remote_port
+Host remote
+  Hostname remote^gateway
+  Port remote_port
 
 Host *^*
   ProxyCommand ssh-chain %h %p
@@ -21,3 +21,12 @@ Host *
   CanonicalDomains n9.vc
   CanonicalizeMaxDots 1
   CanonicalizeFallbackLocal yes
+
+Host alias-name
+  HostName      ip-adddress
+  User          user-name
+  Port          port
+  IdentityFile  ~/.ssh/id_rsa
+  LocalForward  5000 localhost:3306
+  ServerAliveInterval 30
+  ServerAliveCountMax 3
