--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -52,7 +52,8 @@ unbind o    # focus thru panes
 unbind &    # kill-window
 unbind "#"  # list-buffer
 unbind =    # choose-buffer
-#unbind e
+unbind u
+# unbind e
 #unbind z    # zoom-pane
 #unbind M-Up  # resize 5 rows up
 #unbind M-Down # resize 5 rows down
@@ -367,10 +368,14 @@ set -g @plugin 'tmux-plugins/tmux-resurrect' # Restore previous sessions on rebo
 set -g @plugin 'tmux-plugins/tmux-continuum' # Restore previous sessions on reboot
 set -g @plugin 'tmux-plugins/tmux-battery' #Show battery icon/status
 set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @tpm_plugins "                 \
   tmux-plugins/tpm                    \
   soyuka/tmux-current-pane-hostname     \
 "
+
+bind u run '~/.tmux/plugins/tmux-url-select/tmux-url-select.pl'
+
 # Tmux will auto-start on system boot
 set -g @continuum-boot 'on'
 set -g @continuum-boot-options 'iterm'
