--- a/.gitmodules
+++ b/.gitmodules
@@ -44,6 +44,7 @@
 [submodule "home/Util/todo.txt-cli"]
 	path = home/Util/todo.txt-cli
 	url = https://github.com/todotxt/todo.txt-cli.git
+	ignore = dirty
 [submodule "home/.font/cascadia-code"]
 	path = home/.font/cascadia-code
 	url = https://github.com/microsoft/cascadia-code.git
