--- a/home/.zpreztorc
+++ b/home/.zpreztorc
@@ -44,6 +44,7 @@ zstyle ':prezto:load' pmodule \
   'osx'\
   'syntax-highlighting' \
   'history-substring-search' \
+  'autosuggestions' \
   'prompt'
 
 #
