--- a/.gitattributes
+++ b/.gitattributes
@@ -12,5 +12,5 @@ home/.todo/* filter=git-crypt diff=git-crypt
 home/.ssh/* filter=git-crypt diff=git-crypt
 
 # Encrypt .zsh_history
-home/.zsh_history
+home/.zsh_history filter=git-crypt diff=git-crypt
 
