--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ __pycache__
 # Ignore all npm modules maybe
 **/node_modules/**
 
+# Ignore todo.txt
+home/.todo/*
+
+# Ignore zsh_history
+home/.zsh_history
+
+
