Fix .tmux.conf issue for tmux version 3.0

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -38,8 +38,8 @@ unbind "\$" # rename-session
 unbind ,    # rename-window
 unbind %    # split-window -h
 unbind '"'  # split-window
-unbind }    # swap-pane -D
-unbind {    # swap-pane -U
+# unbind }    # swap-pane -D
+# unbind {    # swap-pane -U
 unbind [    # paste-buffer
 unbind ]
 unbind "'"  # select-window
@@ -110,7 +110,7 @@ bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind -n C-'\' if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 
 # Zoom pane
@@ -121,7 +121,7 @@ bind L command-prompt -p "Link window from (session:window): " "link-window -s %
 
 # Swap panes back and forth with 1st pane
 # When in main-(horizontal|vertical) layouts, the biggest/widest panel is always @1
-bind \ if '[ #{pane_index} -eq 1 ]' \
+bind '\' if '[ #{pane_index} -eq 1 ]' \
      'swap-pane -s "!"' \
      'select-pane -t:.1 ; swap-pane -d -t 1 -s "!"'
 
