--- a/.gitattributes
+++ b/.gitattributes
@@ -20,3 +20,7 @@ home/.landcold7.gq/* filter=git-crypt diff=git-crypt
 # Encrypt trojan
 home/.config/trojan.json filter=git-crypt diff=git-crypt
 home/.config/trojan-client.json filter=git-crypt diff=git-crypt
+
+# Encrypt SS
+home/.config/ss.json filter=git-crypt diff=git-crypt
+home/.config/ss-client.json filter=git-crypt diff=git-crypt
